--- a/src/components/movie-item.css
+++ b/src/components/movie-item.css
@@ -1,25 +1,20 @@
 .movie-item-icon-box {
 	position: absolute;
-	bottom: 0;
+	top: 208px;
 	right: 50;
+	border-radius: 50%;
+	background: #cb0000;
 }
 
 .movie-item-icon {
-	color: #cb0000;
+	color: #fff;
 }
 
-/*.movie-item-root {*/
-/*	color: rgba(0, 0, 0, 0.54);*/
-/*	padding: 16px;*/
-/*	text-align: center;*/
-/*	box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);*/
-/*	border-radius: 4px;*/
+.movie-item-image {
+	max-width: 175px;
+}
 
-/*	display: flex;*/
-/*	flex-direction: row;*/
-/*	align-items: center;*/
-/*	margin-top: 10px;*/
-/*	justify-content: center;*/
-/*	min-height: 200px;*/
-/*	position: relative;*/
-/*}*/
+.movie-item-root:hover {
+	border: 1px solid #3f51b5;
+	box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 3px 3px 2px rgba(0,0,0,0.14), 0px 3px 5px 2px rgba(0,0,0,0.12);
+}
